Fixes
Fixed Issues
- background on Modal was too dark
- Main page not loading after logout
- Not pulling tasks and not pulling correct tanks

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -8,7 +8,7 @@
 		height: 100%;
 		width: 100%;
 		background: #000;
-		background: rgba(0,0,0,.8);
+		background: rgba(0,0,0,.6);
 		z-index: -1;
 		display: none;
 		top: 0;
